--- a/QuanLiNhaHang.csproj
+++ b/QuanLiNhaHang.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Class\EmployeeDAO.cs" />
     <Compile Include="Class\Food.cs" />
     <Compile Include="Class\DatMonDAO.cs" />
+    <Compile Include="Class\FoodDAO.cs" />
     <Compile Include="Class\Table.cs" />
     <Compile Include="FBill.cs">
       <SubType>Form</SubType>
@@ -93,6 +94,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="test.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="test.Designer.cs">
+      <DependentUpon>test.cs</DependentUpon>
+    </Compile>
     <Compile Include="User Control\UC_BookTable.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -154,6 +161,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="test.resx">
+      <DependentUpon>test.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="User Control\UC_BookTable.resx">
       <DependentUpon>UC_BookTable.cs</DependentUpon>
     </EmbeddedResource>
@@ -230,6 +240,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\icons8-cart-24.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-fix-50.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-exit-48 .png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
