--- a/QuanLiNhaHang.csproj
+++ b/QuanLiNhaHang.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Class\DatMonDAO.cs" />
     <Compile Include="Class\FoodDAO.cs" />
     <Compile Include="Class\Table.cs" />
+    <Compile Include="Class\ThucKhach.cs" />
     <Compile Include="FBill.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -91,6 +92,12 @@
     </Compile>
     <Compile Include="FFood.Designer.cs">
       <DependentUpon>FFood.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FHome.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FHome.Designer.cs">
+      <DependentUpon>FHome.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -150,6 +157,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FFood.resx">
       <DependentUpon>FFood.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FHome.resx">
+      <DependentUpon>FHome.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -246,6 +256,27 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\icons8-exit-48 .png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-account-50.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BoCuonLaLot.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BachTuocNuongMuoiOt.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BunBoHue.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\LauThai.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\GoiBapBo.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\NemRan.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
