--- a/QuanLiNhaHang.csproj
+++ b/QuanLiNhaHang.csproj
@@ -99,6 +99,12 @@
     <Compile Include="FHome.Designer.cs">
       <DependentUpon>FHome.cs</DependentUpon>
     </Compile>
+    <Compile Include="FShip.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FShip.Designer.cs">
+      <DependentUpon>FShip.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="test.cs">
@@ -160,6 +166,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FHome.resx">
       <DependentUpon>FHome.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FShip.resx">
+      <DependentUpon>FShip.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
