--- a/QuanLiNhaHang.csproj
+++ b/QuanLiNhaHang.csproj
@@ -52,7 +52,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CaLamViec.cs" />
+    <Compile Include="CaLamViec.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CaLamViec.Designer.cs">
+      <DependentUpon>CaLamViec.cs</DependentUpon>
+    </Compile>
     <Compile Include="Class\BookTable.cs" />
     <Compile Include="Class\BookTableDAO.cs" />
     <Compile Include="Class\DatMon.cs" />
@@ -152,6 +157,9 @@
     <Compile Include="User Control\UC_Register.Designer.cs">
       <DependentUpon>UC_Register.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="CaLamViec.resx">
+      <DependentUpon>CaLamViec.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FBill.resx">
       <DependentUpon>FBill.cs</DependentUpon>
     </EmbeddedResource>
